# banshee-unofficial-plugins

./: ProjectHome.md
banshee-alarm-plugin/: BUGS  ChangeLog  Makefile.am  README  TODO  alarm.mdp  alarm.mds  alarm.pidb  autogen.sh  configure.ac
banshee-alarm-plugin/data/: Makefile.am  alarm.schemas
banshee-alarm-plugin/po/: POTFILES.in
banshee-alarm-plugin/src/: Alarm.cs  AlarmConfigDialog.cs  AlarmConfigPage.cs  AlarmPlugin.cs  ConfigurationWidget.cs  Makefile.am  Plugin.cs  SleepTimerConfigDialog.cs  VolumeFade.cs
banshee-beagle-plugin/: ChangeLog  NEWS  autogen.sh  configure.ac
banshee-beagle-plugin/src/: BeagleImportSource.cs  BeaglePlugin.cs  BeagleUtil.cs
banshee-engine-xine/: ChangeLog  README  autogen.sh  configure.ac
banshee-engine-xine/src/: Xine.cs  XinePlayerEngine.cs
banshee-itunes-plugin/src/: Makefile.am  MusicStoreConfigDialog.cs  MusicStorePlugin.cs  MusicStorePurchaseTransaction.cs  MusicStoreSource.cs  MusicStoreTrackInfo.cs
banshee-itunes-plugin/src/fairstore/: FairStore.cs  MP4.cs
banshee-locker-plugin/src/: MP3tunes.cs  Makefile.am
banshee-minimode-plugin/src/: Makefile.am  MiniModePlugin.cs  MiniModeWindow.cs  minimode.glade
banshee-official-plugins/: .ChangeLog.swp  .svnignore  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  autogen.sh  banshee-official-plugins.mds  configure.ac
banshee-official-plugins/plugins/: Common.cs.in  Makefile.am
banshee-official-plugins/plugins/MiniMode/: AssemblyInfo.cs.in  Makefile.am  MiniMode.mdp  MiniModePlugin.cs  MiniModeWindow.cs
banshee-official-plugins/plugins/Podcast/: AssemblyInfo.cs.in  FeedUtils.cs  Makefile.am  Podcast.mdp  PodcastCore.cs  PodcastDBManager.cs  PodcastFeedFetcher.cs  PodcastFeedInfo.cs  PodcastGConfKeys.cs  PodcastInfo.cs  PodcastLibrary.cs  PodcastPlugin.cs  StringUtils.cs  banshee-plugin-podcast.schemas.in
banshee-official-plugins/plugins/Podcast/DownloadCore/: Dispatcher.cs  DownloadActiveEvent.cs  DownloadCore.cs  DownloadQueue.cs  DownloadTask.cs  HttpDownloadTask.cs  TransferStatusManager.cs
banshee-official-plugins/plugins/Podcast/FeedParsers/: RFC822DateTime.cs  RssPodcastFeedParser.cs
banshee-official-plugins/plugins/Podcast/UI/: PodcastErrorsSource.cs  PodcastFeedPropertiesDialog.cs  PodcastFeedView.cs  PodcastPixbufs.cs  PodcastPlaylistModel.cs  PodcastPlaylistView.cs  PodcastPropertiesDialog.cs  PodcastSource.cs  PodcastSubscribeDialog.cs  SyncPreferenceComboBox.cs  SyncPreferenceComboBox.cs.cs
banshee-official-plugins/plugins/Podcast/data/: PodcastMenu.xml
banshee-official-plugins/plugins/Radio/: AssemblyInfo.cs.in  Makefile.am  RadioPlugin.cs  RadioSource.cs  RadioTrackInfo.cs  StationModel.cs  StationView.cs  banshee-plugin-radio.schemas.in
banshee-official-plugins/plugins/Recommendation/: AssemblyInfo.cs.in  Makefile.am  Recommendation.mdp  RecommendationPane.cs  RecommendationPlugin.cs
banshee-official-plugins/plugins/SmartPlaylists/: AssemblyInfo.cs.in  Editor.cs  Makefile.am  Plugin.cs  QueryBuilder.cs  QueryBuilderModel.cs  SmartPlaylist.cs  SmartPlaylistEditor.cs  SmartPlaylists.mdp  smart-playlist.glade
banshee-official-plugins/po/: ChangeLog  LINGUAS  POTFILES.in  nb.po
banshee-recommendation-plugin/src/: Makefile.am  RecommendationPane.cs  RecommendationPlugin.cs
banshee-sample-plugin/src/: Makefile.am  SamplePlugin.cs
banshee-wikipedia-plugin/: AUTHORS  BUGS  ChangeLog  Makefile.am  TODO  configure.ac  wikipedia.mdp  wikipedia.mds
banshee-wikipedia-plugin/src/: Makefile.am  Plugin.cs  QueryController.cs  WikipediaPane.cs  WikipediaQueryController.cs
banshee-wikipedia-plugin/src/Gui/: ContextPane.cs  WikipediaBrowser.cs  WikipediaPane.cs
banshee-wikipedia-plugin/src/Page/: PageDecorator.cs  PageFooter.cs  PageHeader.cs  WikipediaDecorator.cs  WikipediaFooter.cs
banshee-wikipedia-plugin/src/Page/Body/: ErrorPage.cs  PageBody.cs  WaitBody.cs
banshee-wikipedia-plugin/src/Page/Footer/: CommonPageFooter.cs  CommonWikipediaFooter.cs
banshee-wikipedia-plugin/src/Page/Header/: LyricsHeader.cs  PageGtkHeader.cs  (+5 more)
banshee-wikipedia-plugin/src/Parser/: Parser.cs  RegexWikipediaParser.cs  WikipediaParser.cs  XPathWikipediaParser.cs
banshee-wikipedia-plugin/src/Query/: WikipediaQuery.cs
banshee-wikipedia-plugin/src/WikiQuery/: WikipediaArtistQuery.cs  WikipediaCommonQuery.cs  WikipediaGenreQuery.cs
banshee-wikipedia-plugin/src/WikipediaPage/: WikipediaHeader.cs  WikipediaPage.cs
gstreamer-dtdriver/: ChangeLog  Makefile.am  configure.ac
gstreamer-dtdriver/helix/: README
gstreamer-dtdriver/helix/patches/: proxyfsys.diff
gstreamer-dtdriver/src/: Makefile.am  gstdtdriver.c  gstdtdriver.h  test.c
gstreamer-xing/: ChangeLog  Makefile.am  README  configure.ac
gstreamer-xing/src/: Makefile.am  amod.h  balow.h  bitallo1.h  bitallo3.h  cnt.c  cnts.c  emap.c  emdct.c  enc.h  encapp.h  filter2.c  gst-xing-encoder-0.10.c  gst-xing-encoder-0.8.c  htable.h  l3init.c  l3math.c  mp3enc.h  pcmhpm.c  spdsmr.c  srcc.h  srccf.cpp  srccfb.cpp  xhead.c  xhead.h
helix-dbus-player/: .ChangeLog.swp  ChangeLog  Makefile.am  aclocal.m4  configure.ac
helix-dbus-player/data/: Makefile.am  org.gnome.HelixDbusPlayer.service.in
helix-dbus-player/src/: HelixDbusClient.cs  HelixRemotePlayer.cs  Makefile.am  helix-dbus-player.cc  helix-dbus-server-main.cc  helix-dbus-server.cc  helix-dbus-server.h  hxplayer.cc  hxplayer.h
helix-dbus-player/src/helix/: README
helix-dbus-server/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
helix-dbus-server/src/: HelixRemoteClient.cs  Makefile.am  helix-dbus-server.cc  helix-dbus-server.h  hxmessage.cc  hxmessagesegment.h  hxplayer.cc  hxplayer.h
helix-dbus-server/src/helix/: README
musicbrainz-sharp/: ChangeLog  Makefile.am  README  configure.ac
musicbrainz-sharp/docs/: Makefile.am  musicbrainz-sharp-docs.source
musicbrainz-sharp/docs/en/: index.xml
musicbrainz-sharp/src/: Makefile.am
trunk/banshee-locker-plugin/: autogen.sh  configure.ac
trunk/banshee-locker-plugin/src/: LockerConfigDialog.cs  LockerPlugin.cs  LockerSource.cs  LockerTrackInfo.cs  MP3tunes.cs
(+267 files in other folders)
